@@ -3,11 +3,6 @@
 #ifndef _MULTIMEDIA_H_
 #define _MULTIMEDIA_H_
 
-#define WHITESPACE_STR  " \f\n\r\t\v"
-
-char *trim(char *);
-//void mpeg_video(char *, struct video *);
-//void avi_video(char *, struct video *);
 char *get_preset(char[4]);
 char *safe_genre(char *);
 
